package PRACTICA_09;

public class Computer implements Connectable {

    private boolean isOn;

    @Override
    public void turnOn() {
        isOn = true;
    }

    @Override
    public void turnOff() {
        isOn = false;
    }

    @Override
    public boolean isOn() {
        return isOn;
    }
    
}
